Fix card__title-actions-container overflow

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -214,6 +214,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .card--enable-overflow {
